[package]
name = "holochain_bootstrap_core"
version = "0.0.1"
edition = "2021"

## NOTE! We must be very careful with our dependencies
## lest we will blow up the WASM size for the cloudflare worker
## MAYBE: should we use RMP directly without serde??

[dependencies]
ed25519-dalek = { version = "1.0.1" }
rmp-serde = { version = "1.0.0" }
serde = { version = "1.0.135", features = [ "derive", "rc" ] }
serde_bytes = { version = "0.11.5" }

[dev-dependencies]
futures = "0.3.19"
