[package]
name = "rust-to-wasm"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.29"
holochain_bootstrap_core = { path = "../holochain_bootstrap_core" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# also include link-time optimizations
lto = true
