[package]
name = "holochain_bootstrap_core"
version = "0.0.1"
edition = "2021"

## NOTE! We must be very careful with our dependencies
## lest we will blow up the WASM size for the cloudflare worker

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "alloc" ] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = [ "u32_backend" ] }

# alas, rmp doesn't support no_std, so there's no point in us supporting no_std
rmp = { version = "0.8.10" }

[dev-dependencies]
futures = "0.3.19"
rmp-serde = { version = "1.0.0" }
serde = { version = "1.0.135", features = [ "derive" ] }
serde_bytes = { version = "0.11.5" }
